# flat-finder

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  main.py  main_old.py  pyproject.toml  scraperapi.py
config/: .env.example
flat_finder/: processor.py  utils.py
flat_finder/adapters/: __init__.py  slack_adapter.py  telegram_adapter.py
flat_finder/downloader/: __init__.py  scraping_bee_downloader.py  selenium_downloader.py  simple_downloader.py
flat_finder/models/: __init__.py  adapter.py  downloader.py  parse_exception.py  parsed_flat.py  provider_config.py
flat_finder/parser/: __init__.py  parse_html.py
flat_finder/provider/: __init__.py  immonet.py  immoscout24.py  immowelt.py
